Cambio en masyusculas

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
      <meta charset = "UTF-8">
-     <title> Lista de Cursos de DevOps de Alura Nivel 6</title>
+     <title> Lista de cursos de DevOps de Alura nivel 6</title>
 </head>
 <body>
      <ul>
