--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
      <ul>
-         <li> Vagrant </li>
+         <li> Vagrant: Gerenciando Maquinas </li>
          <li> Docker: Dolor de cabeza </li>
          <li> Ansible </li>
          <li> Integracion continua: Madurez </li>
