Modificado el nombre de Kubernetes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <li> Docker: Dolor de cabeza </li>
          <li> Ansible </li>
          <li> Integracion continua: Madurez </li>
-         <li> Kubernetes </li>
+         <li> Kubernetes; Introcuccion a la orquestacion </li>
      </ul>
 </body>
 </html>
